update readme with jvm args and findings fixes #11